# genereate_point_pillar_fast

./: CMakeLists.txt  pillar_base.h  preprocess_points.cpp  preprocess_points.h
test/: main.cpp  test_point_pillars.cpp
